# evalml

./: .check_all_test_dirs_included  .check_all_test_dirs_included.py  .codecov.yml  .coveragerc  .darglint  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile.arm  Fraud Prediction Demo.ipynb  LICENSE  MANIFEST.in  Makefile  Parallel Perf Test.ipynb  README.md  Untitled.ipynb  am-requirements.txt  cProfile_0.16.4  cProfile_0.16.4.txt  cProfile_0.17.2.txt  cb_model.json  contributing.md  core-requirements.txt  dev-requirements.txt  docs-requirements.txt  import_or_skip.sh  minimum_req.py  pull_request_template.md  pyproject.toml  pytest.ini  rankings.csv  readthedocs_build.sh  release.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.bsp/: sbt.json
.circleci/: config.yml
.github/: .codecov.yml  auto_assign.yml  codecov.yml  conda_config.py  conda_version_check.py  meta.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto_approve_dependency_PRs.yaml  auto_approve_dependency_PRs.yml  broken_link_checker.yaml  broken_link_checker.yml  build_conda_pkg.yaml  build_conda_pkg.yml  build_docs.yml  check_conda_pkg_versions.yaml  check_conda_pkg_versions.yml  dependency_check.yml  detect_changes.yaml  detect_changes.yml  dummy_test_workflow.yml  dummy_workflow.yml  evalml_main_airflow_performance_tests.yaml  evalml_main_performance_tests.yaml  install_test.yaml  install_test.yml  latest_dependency_checker.yaml  latest_dependency_checker.yml  lint_tests.yaml  lint_tests.yml  linux_integration_tests.yaml  linux_integration_tests.yml  linux_nightlies.yaml  linux_nightlies.yml  linux_unit_tests.yml  linux_unit_tests_with_dask.yml  linux_unit_tests_with_latest_deps.yaml  linux_unit_tests_with_latest_deps.yml  linux_unit_tests_with_minimum_deps.yaml  linux_unit_tests_with_minimum_deps.yml  linux_unit_tests_with_minmin_deps.yml  minimum_dependency_checker.yaml  minimum_dependency_checker.yml  pull_request_check.yaml  release.yaml  release.yml  release_notes_updated.yaml  release_notes_updated.yml  (+10 more)
.ipython/profile_default/: ipython_kernel_config.py
dask/: Dockerfile  dask-requirements.txt  dask.ipynb  dask_remote_blitz.ipynb  prepare.sh  push_image.sh
dask/credentials/: machinefl_id_rsa  machinefl_id_rsa.pub
demos/: Fraud Demo.ipynb  Titanic Demo-Copy.ipynb  Titanic Demo.ipynb
docs/: Fraud Prediction Demo.ipynb  Makefile  make.bat  notebook_version_standardizer.py  readthedocs-requirements.txt  requirements.txt
docs/source/: a_index.rst  api_index.rst  api_reference.rst  automl.ipynb  changelog.rst  conf.py  data_checks.ipynb  developer_resources.ipynb  development.ipynb  disable-warnings.py  faq.ipynb  getting_started.ipynb  index.ipynb  index.rst  install.ipynb  install.md  install.rst  ipython_config.py  move-disable-warnings.py  objective_functions.ipynb  pipelines.ipynb  release_notes.rst  resources.ipynb  roadmap.rst  start.ipynb  tutorials.ipynb  user_guide.ipynb
evalml/: __init__.py  __main__.py  fraud_detection.py  lead_scoring.py  update_checker.py
evalml/automl/: __init__.py  auto_base.py  auto_binary_classification_search.py  auto_classification_search.py  auto_ml_search.py  auto_multiclass_classification_search.py  auto_regression_search.py  auto_search_base.py  automl_search.py  callbacks.py  pipeline_search_plots.py  pipeline_template.py  progress.py  progress_monitor.py  utils.py
evalml/data_checks/: __init__.py  basic_data_checks.py  class_imbalance_data_check.py  data_check.py  data_check_action.py  data_check_action_code.py  data_check_action_option.py  data_check_message.py  data_check_message_code.py  data_check_message_type.py  data_check_results.py  data_checks.py  datetime_format_data_check.py  datetime_nan_data_check.py  default_data_checks.py  detect_highly_null_data_check.py  detect_id_columns_data_check.py  detect_invalid_targets_data_check.py  detect_label_leakage_data_check.py  detect_outliers_data_check.py  equal_interval_data_check.py  high_variance_cv_data_check.py  highly_null_data_check.py  highly_null_rows_data_check.py  id_columns_data_check.py  invalid_target_data_check.py  invalid_targets_data_check.py  label_leakage_data_check.py  messsage.py  mismatched_series_length_data_check.py  multicollinearity_data_check.py  natural_language_nan_data_check.py  no_variance_data_check.py  null_data_check.py  outliers_data_check.py  sparsity_data_check.py  target_distribution_data_check.py  target_leakage_data_check.py  ts_parameters_data_check.py  ts_splitting_data_check.py  (+3 more)
evalml/demos/: __init__.py  breast_cancer.py  churn.py  diabetes.py  fraud.py  weather.py  wine.py
evalml/exceptions/: __init__.py  exceptions.py
evalml/guardrails/: utils.py
evalml/model_family/: __init__.py  model_family.py  utils.py
evalml/model_types/: __init__.py  model_types.py  utils.py
evalml/model_understanding/: __init__.py  _partial_dependence.py  _partial_dependence_fast_mode_utils.py  _partial_dependence_utils.py  decision_boundary.py  feature_explanations.py  force_plots.py  graphs.py  metrics.py  model_explanations.py  partial_dependence.py  partial_dependence_functions.py  permutation_importance.py  visualizations.py
evalml/models/: __init__.py  apply.py  auto_base.py  auto_classifier.py  auto_regressor.py  classifier.py  pipeline_search_plots.py  pipeline_template.py  render.py
evalml/new_module/: new_file.py
evalml/objectives/: __init__.py  binary_classification_objective.py  classification_objective.py  clustering_objective.py  cost_benefit_matrix.py  fraud_cost.py  fraud_detection.py  lead_scoring.py  multiclass_classification_objective.py  objective_base.py  regression_objective.py  sensitivity_low_alert.py  standard_metrics.py  time_series_regression_objective.py  unsupervised_objective.py  utils.py
evalml/pipelines/: __init__.py  base_meta.py  binary_classification_pipeline.py  binary_classification_pipeline_mixin.py  classification_pipeline.py  clustering_pipeline.py  (+35 more)
test-reports/: junit.xml
tools/: format_release_notes.sh
(+679 files in other folders)
