[metadata]
name = evalml
version = attr: evalml.__version__
author = Alteryx, Inc.
license = BSD 3-clause
license_files = 
    LICENSE
long_description = file: READEME.md
url = https://github.com/alteryx/evalml/
download_url = https://pypi.org/project/evalml/
long_description_content_type = text/markdown
author_email = open_source_support@alteryx.com
keywords = data science machine learning optimization automl
description = EvalML is an AutoML library that builds, optimizes, and evaluates machine learning pipelines using domain-specific objective functions.

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

project_urls =
    Documentation = https://evalml.alteryx.com
    Source Code = https://github.com/alteryx/evalml/
    Changes = https://evalml.alteryx.com/en/latest/release_notes.html
    Issue Tracker = https://github.com/alteryx/evalml/issues
    Twitter = https://twitter.com/alteryxoss
    Chat = https://join.slack.com/t/alteryx-oss/shared_invite/zt-6inxevps-RSbpr9lsACE1kObXz4rIuA

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    numpy >= 1.21.0
    pandas >= 1.4.0
    scipy >= 1.5.0
    scikit-learn >= 0.24.0,<1.1.0
    scikit-optimize >= 0.8.1
    pyzmq >= 20.0.0
    colorama >= 0.4.4
    cloudpickle >= 1.5.0
    click >= 7.1.2
    requirements-parser >= 0.2.0
    shap >= 0.40.0
    statsmodels >= 0.12.2
    texttable >= 1.6.2
    woodwork >= 0.16.2
    dask >= 2021.10.0
    nlp-primitives >= 2.1.0
    featuretools >= 1.7.0
    networkx >= 2.5, < 2.6
    plotly >= 5.0.0
    kaleido >= 0.1.0
    ipywidgets >= 7.5
    xgboost >= 1.5.1
    catboost >= 0.20
    lightgbm >= 2.3.1
    matplotlib >= 3.3.3
    graphviz >= 0.13; platform_system!='Windows'
    seaborn >= 0.11.1
    category_encoders >= 2.2.2
    imbalanced-learn >= 0.8.0
    pmdarima >= 1.8.1
    sktime >= 0.7.0
    lime >= 0.2.0.1
    vowpalwabbit >= 8.11.0
python_requires = >=3.8,<4

[options.extras_require]
dev = 
    flake8 == 3.7.0
    black == 22.3.0
    isort == 5.0.0
    pydocstyle == 6.1.1
    darglint == 1.8.0
    %(test)s
    %(docs)s

test = 
    pytest == 6.0.1
    pytest-xdist == 2.1.0
    pytest-timeout == 1.4.2
    pytest-cov == 2.10.1
    nbval == 0.9.3
    IPython >= 7.16.3
    codecov == 2.1.11
    PyYAML == 5.4
    coverage[toml] >= 6.4

docs = 
    docutils >=0.15.2, <0.17
    pydata-sphinx-theme >= 0.3.1
    astroid <= 2.6.6
    Sphinx >= 4.5.0
    nbconvert >= 6.4.5
    nbsphinx >= 0.8.5
    sphinx-autoapi
    sphinx-inline-tabs == 2022.1.2b11
    sphinx-copybutton == 0.4.0
    myst-parser == 0.16.1

update_checker = 
    alteryx-open-src-update-checker >= 2.0.0

prophet = 
    prophet-prebuilt == 1.0.2

complete =
    %(prophet)s
    %(update_checker)s

[options.package_data]
* =
    *.txt
    LICENSE
    README.md

[options.exclude_package_data]
* =
    * __pycache__
    *.py[co]


[tool:pytest]
python_files = evalml/tests/*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
junit_duration_report = call

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = docs/*
ignore = E501,W504,W503
per-file-ignores =
    **/__init__.py:F401
    **/tests/*:D

[aliases]
test=pytest

[isort]
profile=black
forced_separate=evalml
known_first_party=evalml
multi_line_output=3
skip=__init__.py

[darglint]
ignore=DAR402
ignore_regex=^_(.*)
strictness=short

[options.data_files]
evalml/tests/data = 
    evalml/tests/data/churn.csv
    evalml/tests/data/daily-min-temperatures.csv
    evalml/tests/data/fraud_transactions.csv.gz
    evalml/tests/data/tips.csv
    evalml/tests/data/titanic.csv
